--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+#/source/template/data-tmp.json
+#/source/template/mixins/_mixin-list.pug
+#/gulp/ftp-config.js
+
 build
 node_modules
 .idea
+.vscode
+zip
