--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "builder",
-  "version": "0.0.1",
-  "author": "krabaton",
+  "name": "start-template",
+  "version": "1.3.0",
+  "author": "den4ik",
   "license": "ISC",
   "scripts": {
     "start": "set NODE_ENV=development&& gulp",
@@ -13,62 +13,70 @@
     "zip": "gulp zip",
     "zip-all": "gulp zip:all",
     "zip-production": "set NODE_ENV=production&& gulp zip:production",
-    "pack": "gulp pack"
+    "pack": "gulp pack",
+    "cfg": "gulp config",
+    "component": "gulp component",
+    "component:del": "gulp component:del"
   },
   "devDependencies": {
+    "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
     "@htmlacademy/editorconfig-cli": "1.x",
-    "babel-core": "^6.26.0",
-    "babel-preset-env": "^1.6.1",
-    "babelify": "^8.0.0",
-    "browser-sync": "^2.23.6",
-    "browserify": "^15.2.0",
-    "css-mqpacker": "^6.0.2",
-    "del": "^3.0.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-latest": "6.24.1",
+    "babelify": "^10.0.0",
+    "browser-sync": "^2.26.7",
+    "browserify": "^16.3.0",
+    "clear": "0.1.0",
+    "css-mqpacker": "^7.0.0",
+    "del": "^5.0.0",
     "editorconfig-tools": "^0.1.1",
     "gulp": "^4.0",
     "gulp-autoprefixer": "^6.1.0",
     "gulp-cheerio": "^0.6.3",
     "gulp-concat": "^2.6.1",
-    "gulp-concat-css": "^3.0.0",
+    "gulp-concat-css": "^3.1.0",
     "gulp-csscomb": "^3.0.8",
     "gulp-csso": "^3.0.1",
     "gulp-data": "^1.3.1",
-    "gulp-if": "^2.0.2",
-    "gulp-imagemin": "^4.1.0",
-    "gulp-load-plugins": "^1.5.0",
+    "gulp-if": "^3.0.0",
+    "gulp-imagemin": "^6.0.0",
+    "gulp-load-plugins": "^2.0.0",
     "gulp-merge-json": "^1.2.1",
     "gulp-notify": "^3.2.0",
-    "gulp-plumber": "^1.2.0",
-    "gulp-postcss": "^7.0.1",
-    "gulp-pug": "^3.3.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-replace": "^0.6.1",
+    "gulp-plumber": "^1.2.1",
+    "gulp-postcss": "^8.0.0",
+    "gulp-pug": "^4.0.1",
+    "gulp-rename": "^1.4.0",
+    "gulp-replace": "^1.0.0",
     "gulp-replace-task": "^0.11.0",
-    "gulp-sass": "^3.1.0",
+    "gulp-sass": "^4.0.2",
     "gulp-sass-glob-import": "^0.1.0",
-    "gulp-sourcemaps": "^2.6.4",
-    "gulp-svg-sprite": "^1.3.7",
-    "gulp-svgmin": "^1.2.4",
-    "gulp-uglify": "^3.0.0",
-    "gulp-zip": "^4.1.0",
-    "gulp.spritesmith": "^6.9.0",
-    "merge-stream": "^1.0.1",
-    "postcss-reporter": "^5.0.0",
-    "postcss-scss": "^1.0.3",
-    "sort-css-media-queries": "^1.3.4",
-    "stylelint": "^8.4.0",
-    "stylelint-scss": "^2.4.0",
+    "gulp-sourcemaps": "^2.6.5",
+    "gulp-strip-comments": "^2.5.2",
+    "gulp-svg-sprite": "^1.5.0",
+    "gulp-svgmin": "^2.2.0",
+    "gulp-uglify": "^3.0.2",
+    "gulp-zip": "^5.0.0",
+    "gulp.spritesmith": "^6.10.1",
+    "merge-stream": "^2.0.0",
+    "postcss-reporter": "^6.0.1",
+    "postcss-scss": "^2.0.0",
+    "prompts": "2.1.0",
+    "rimraf": "2.6.3",
+    "sort-css-media-queries": "^1.4.3",
+    "stylelint": "^10.1.0",
+    "stylelint-declaration-use-variable": "^1.6.1",
+    "stylelint-scss": "^3.9.2",
     "vinyl-buffer": "^1.0.1",
     "vinyl-ftp": "^0.6.1",
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
     "blazy": "^1.8.2",
-    "browser-update": "^2.1.11",
-    "jquery": "^3.3.1",
-    "lodash": "^4.17.11",
-    "normalize.css": "^7.0.0",
-    "stylelint-declaration-use-variable": "^1.6.1",
+    "browser-update": "^3.2.11",
+    "jquery": "^3.4.1",
+    "lodash": "^4.17.15",
+    "normalize.css": "^8.0.1",
     "svg4everybody": "^2.1.9"
   }
 }
