--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "html-builder",
-  "version": "1.3.1",
+  "name": "pug-builder",
+  "version": "1.3.11",
   "author": "den4ik",
   "license": "ISC",
   "scripts": {
